# colorful-waves

./: LICENSE  README.md  colorful-waves.opam  dune-project
_build/: .db  .digest-db  log
_build/default/: colorful-waves.dune-package  colorful-waves.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: colorful_waves.cma  colorful_waves.cmxa  colorful_waves.cmxs
_build/default/lib/.colorful_waves.objs/byte/: colorful_waves.cmi  colorful_waves.cmo  colorful_waves.cmt
_build/default/lib/.colorful_waves.objs/native/: colorful_waves.cmx
_build/default/lib/.merlin-conf/: lib-colorful_waves
_build/default/test/.merlin-conf/: exe-test_colorful_waves
_build/default/test/.test_colorful_waves.eobjs/byte/: dune__exe__Test_colorful_waves.cmi  dune__exe__Test_colorful_waves.cmti
_build/default/test/.test_colorful_waves.eobjs/native/: dune__exe__Test_colorful_waves.cmx
_build/install/default/lib/colorful-waves/: META  dune-package  opam
lib/: dune
test/: dune
